Added docker compose file for further demo stuff

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,5 +1,10 @@
 
 
+project:
+  base:
+    folder: /Users/ivonet/dev/camel-demo
+
+
 flyway:
   url: "jdbc:h2:mem:camel_demo;MODE=MySQL;INIT=RUNSCRIPT FROM 'classpath:flyway_init.sql'"
   user: sa
