--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,33 +10,45 @@ services:
     - ./docker/ftp/passwd:/etc/pure-ftpd/passwd
     - ./test-data/ftp:/home/ftpusers
 
-#  mysql:
-#    image: ivonet/mysql:latest
-#    volumes:
-#      - ./docker/mysql/setup:/docker-entrypoint-initdb.d
-#      - ./docker/volumes/mysql:/testdata
-#      - mysql-data:/var/lib/mysql
-#    ports:
-#      - "3306:3306"
-#    environment:
-#        - MYSQL_ROOT_PASSWORD=secret
-#
-#  activemq:
-#    image: registry.gitlabcd.itv.local/vod-squad/activemq
-#    ports:
-#    - "8161:8161"
-#    - "61616:61616"
-#    - "61613:61613"
-#    environment:
-#    - ACTIVEMQ_MIN_MEMORY=512
-#    - ACTIVEMQ_MAX_MEMORY=2048
-#    - ACTIVEMQ_ENABLED_AUTH=true
-#    - ACTIVEMQ_ADMIN_LOGIN=admin
-#    - ACTIVEMQ_ADMIN_PASSWORD=secret
-#    volumes:
-#    - ./volumes/log/activemq:/var/log/activemq
-#
-#
-#volumes:
-#  mysql-data:
-#    driver: local
+  mysql:
+    image: ivonet/mysql
+    volumes:
+      - ./docker/mysql/setup:/docker-entrypoint-initdb.d
+      - ./target/mysql-sql-folder:/testdata
+      - mysql-data:/var/lib/mysql
+    ports:
+      - "3306:3306"
+    environment:
+        - MYSQL_ROOT_PASSWORD=secret
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin:4.6.4-1
+    ports:
+      - "8888:80"
+    links:
+      - mysql:mysql
+    environment:
+      - MYSQL_USERNAME=root
+      - MYSQL_ROOT_PASSWORD=secret
+      - PMA_HOST=mysql
+    depends_on:
+      - mysql
+
+  activemq:
+    image: ivonet/activemq
+    ports:
+    - "8161:8161"
+    - "61616:61616"
+    - "61613:61613"
+    environment:
+    - ACTIVEMQ_MIN_MEMORY=512
+    - ACTIVEMQ_MAX_MEMORY=2048
+    - ACTIVEMQ_ENABLED_AUTH=true
+    - ACTIVEMQ_ADMIN_LOGIN=admin
+    - ACTIVEMQ_ADMIN_PASSWORD=secret
+    volumes:
+    - ./target/activemq-log:/var/log/activemq
+
+volumes:
+  mysql-data:
+    driver: local
