--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -4,6 +4,15 @@ project:
   base:
     folder: /Users/ivonet/dev/camel-demo
 
+ftp:
+  host: localhost
+  port: 11021
+  user:
+    name: user
+    password: secret
+  admin:
+    name: admin
+    password: secret
 
 flyway:
   url: "jdbc:h2:mem:camel_demo;MODE=MySQL;INIT=RUNSCRIPT FROM 'classpath:flyway_init.sql'"
