--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
     <distributionManagement>
         <site>
             <id>github</id>
-            <url>scm:git:https://github.com/IvoNet/camel-demo.git</url>
+            <url>https://github.com/IvoNet/camel-demo</url>
         </site>
     </distributionManagement>
 
