--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 
+
 ftp:
   host: localhost
   port: 11021
@@ -18,3 +19,5 @@ flyway:
 spring:
   activemq:
     broker-url: tcp://localhost:61616
+server:
+  port: 9500
